--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "js-error-handler",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "JS library for simply handling and recording js errors",
   "main": "dist/js-error-handler.js",
   "repository": "git@github.com:pallant/js-error-handler.git",
-  "author": "Joel - Pallant Digital",
+  "author": "Joel Day",
   "license": "MIT",
   "scripts": {
     "build": "babel src -d dist --copy-files"
